# prak-alstrukdat-2021

10pascaprak/: linkdummy.c  linkstack.c  queuelist.c
10pascaprak/elementKeN/: elementken.c
10pascaprak/listdp/: listdp.c
10praprak/listsirkuler/: listsirkuler.c
1pascaPrak/: bilangan.c  frekuensi.c  strnum.c  strongnumber.c
1praPrak/: hello.c  jumlah.c  main.c
2pascaPrak/: bilangan.c  indeksalstrukdat.c  reverse.c
2praPrak/: cetakpersegi.c  eq_string.c  jumlah.c
3pascaPrak/arrdin/: arraydin.c  arraydin.h  arrdin.c  main.c
3pascaPrak/garis/: boolean.h  garis.c
3pascaPrak/jumlahKonsonanVokal/: jumlahkonsonanvokal.c
3pascaPrak/panjangstring/: panjangstring.c
3pascaPrak/point/: point.c
3praPrak/arraydin/: arraydin.c  arraydin.h
3praPrak/panjangstring/: main.c
3praPrak/point/: boolean.h  point_driver.c
4pascaPrak/: query.c
4pascaPrak/arrayMhs/: arrayMhs.c  arrayMhs.h  arrayMhs2.c
4pascaPrak/list/: MinMax.c  list.c
4praPrak/array/: array.c  array.h
4praPrak/fibonacci/: fibonacci.c  fibonacci.h
4praPrak/list/: list.c
5pascaPrak/anagramalstrukdat/: anagramalstrukdat.c  anagramalstrukdat.h
5pascaPrak/cipher/: cipher.c
5pascaPrak/hitungfrekuensi/: hitungfrekuensi.c
5pascaPrak/hitungkarakter/: hitungkarakter.c
5pascaPrak/mesinkarakter/: mesinkarakter.c  mesinkarakter.h
5pascaPrak/mesinkata/: mesinkata.h
5praPrak/mesinkata/: mesinkata.c
6pascaPrak/copyqueue/: copyqueue.c  main.c
6pascaPrak/queue/: main.c  queue.c
6pascaPrak/restoran/: restoran.c
8praprak/: CMakeLists.txt
8praprak/map/: map.c
8praprak/set/: set.c
(+40 files in other folders)
